vlib/v/checker/tests/from_string_on_non_enum_err.vv
struct Foo {
	a int
}

struct Bar {
	b int
}

fn Bar.from_string(a string) {}

fn main() {
	Foo.from_string('foo')
	Bar.from_string('bar')
}
